# 26th-conference-MusicContextProtocol

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
.claude/: settings.local.json
app/: main.py
app/core/: recommendation.py  thumbnail.py
app/utils/: preprocess_sentences.py  sample.py
chrome/: README.md  test.html
chrome/api/: Dockerfile  docker-compose.yml
chrome/api/app/: main.py
chrome/api/app/api/: recommend.py  summarize.py  test_recommend.py  thumbnail.py
chrome/api/app/core/: recommendation.py
chrome/api/app/data/: example_sentences.json
chrome/api/app/models/: schemas.py
chrome/api/app/utils/: save_embeddings.py
chrome/extension/: SPOTIFY_SETUP.md  audio-player.js  background.js  content.js  manifest.json  popup.html  popup.js  spotify-web-player.js  youtube-player.js
title thing/: input.txt  recommendation.py  title.py
